# ChimeraEngine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  ChimeraEngine.kdev4  LICENSE  README.md  TODO  ce.code-workspace  compile_commands.json
AppCargaManual/: CMakeLists.txt
AppCargaManual/include/: Game.h
AppCargaManual/shader/: HudFragmentShader.glsl  HudVertexShader.glsl  fragment.glsl  vertex.glsl
AppCargaManual/src/: Game.cpp  main.cpp
AppEmpty/: CMakeLists.txt
AppEmpty/include/: Game.h  GameEvents.h
AppEmpty/src/: AppEmpty.cpp  Game.cpp  GameEvents.cpp  stdafx.cpp
AppShader/: CMakeLists.txt
AppShader/include/: Game.h  GameEvents.h
AppShader/src/: AppShader.cpp  Game.cpp  GameEvents.cpp
appTest/: CMakeLists.txt
appTest/config/: Log4cxxConfig.xml
appTest/include/: Game.h  appTest.h
appTest/models/: cuboEesfera.dae  cuboTex1.dae  cuboTex1blend.blend  espaco2.blend  espaco2.xml  lua1.blend  piso1.dae  piso2.blend  piso2.blend1  piso2.dae  piso2.xml  piso2Teste.xml  piso3.blend  piso4.blend  piso4.dae  simples1.dae  testeMaterial.blend  testeMaterial.dae
appTest/src/: Game.cpp  appTest.cpp  stdafx.cpp
chimera/: CMakeLists.txt  OpenGLDefs.hpp
chimera/base/: CanvasFB.hpp  Engine.hpp  GameController.hpp  GamePad.hpp  ICamera.hpp  IStateMachine.hpp  ITrans.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  ServiceLocator.hpp  StateStack.hpp  Timer.hpp  Transform.hpp  TransformationStack.hpp  UValue.hpp  Uniform.hpp  ViewProjection.hpp  event.hpp  interfaces.hpp  utils.hpp
chimera/bullet/: Constraint.hpp  PhysicsControl.hpp  Solid.hpp  interfaces.hpp
chimera/collada/: Collada.hpp  ColladaCam.hpp  ColladaCube.hpp  ColladaDom.hpp  ColladaEffect.hpp  ColladaExtra.hpp  ColladaGeometry.hpp  ColladaHeightMap.hpp  ColladaImage.hpp  ColladaLight.hpp  ColladaMaterial.hpp  ColladaMesh.hpp  ColladaParticle.hpp  ColladaPhysicScene.hpp  ColladaRender.hpp  ColladaVisualScene.hpp  ColladaWaveFront.hpp  colladaLoad.hpp
chimera/colladaDB/: Collada.hpp  ColladaCam.hpp  ColladaGeometry.hpp  ColladaImage.hpp  ColladaLight.hpp  ColladaMaterial.hpp  ColladaNode.hpp  ColladaPhysicScene.hpp  ColladaShader.hpp  ColladaVisualScene.hpp  colladaLoad.hpp  loader.hpp
chimera/core/: AABB.hpp  Application.hpp  BSPTree.hpp  BSPTreeNode.hpp  BufferLayout.hpp  Camera.hpp  CameraControllerFPS.hpp  CameraControllerOrbit.hpp  CameraFPS.hpp  CameraOrbit.hpp  CameraOrthographic.hpp  Canvas.hpp  CanvasFB.hpp  CanvasGL.hpp  CanvasHmd.hpp  CanvasOVR.hpp  Collada.hpp  ColladaCam.hpp  ColladaCube.hpp  ColladaEffect.hpp  ColladaGeometry.hpp  ColladaHeightMap.hpp  ColladaImage.hpp  ColladaLight.hpp  ColladaMaterial.hpp  ColladaMesh.hpp  ColladaParticle.hpp  ColladaPhysicScene.hpp  ColladaVisualScene.hpp  ColladaWaveFront.hpp  Color.hpp  Constraint.hpp  Cube.hpp  DrawLine.hpp  Engine.hpp  Events.hpp  Exception.hpp  Eye.hpp  FlowControl.hpp  FontManager.hpp  (+68 more)
chimera/coreGL/: BufferLayout.hpp  CameraControllerFPS.hpp  CanvasGL.hpp  DrawLine.hpp  FontMng.hpp  Light.hpp  Material.hpp  OpenGLDefs.hpp  ParticleEmitter.hpp  ShaderMng.hpp  Texture.hpp  TextureMng.hpp  UValue.hpp  VertexArray.hpp  VertexBuffer.hpp  ViewProjection.hpp  Wavefront.hpp
chimera/ecs/: CameraComponent.hpp  CanvasComponent.hpp  EmitterComponent.hpp  Entity.hpp  LightComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  Registry.hpp  Renderable3dComponent.hpp  ShaderComponent.hpp  SpriteComponent.hpp  TileComponent.hpp  TransComponent.hpp  ViewProjectionComponent.hpp  ecs.hpp
chimera/general/: AABB.hpp
chimera/include/: Camera.h  Camera.hpp  CameraMan.h  CameraMan.hpp  CameraOvr.h  CameraSpherical.h  ChimeraUtils.h  Color.h  Color.hpp  Constraint.h  Constraint.hpp  Coord.h  Coord.hpp  DataMsg.h  Draw.h  Draw.hpp  DrawBox.h  DrawGrid.h  DrawTriMesh.h  Effect.h  Engine3D.h  Entity.h  Entity.hpp  Exception.h  ExceptionBase.hpp  ExceptionChimera.h  ExceptionChimera.hpp  ExceptionSDL.h  ExceptionSDL.hpp  FlowControl.h  Font.h  Font.hpp  GameClient.h  GameClient.hpp  Group.h  Group.hpp  HUD.h  HUD.hpp  HmdDevice.h  HmdDevice.hpp  (+62 more)
chimera/loader/: Library.hpp  ListNodes.hpp  PhysicsScene.hpp  VisualScene.hpp
chimera/node/: Camera.hpp  Coord.hpp  Draw.hpp  Entity.hpp  Font.hpp  Group.hpp  HUD.hpp  ITransform.hpp  InitVisitor.hpp  Light.hpp  Material.hpp  Mesh.hpp  MeshUtil.hpp  Node.hpp  NodeCamera.hpp  NodeGroup.hpp  NodeHUD.hpp  NodeLight.hpp  NodeMesh.hpp  NodeParse.hpp  NodeParticleEmitter.hpp  NodeVisitor.hpp  Particle.hpp  ParticleEmitter.hpp  RenderVisitor.hpp  SceneMng.hpp  SceneNode.hpp  ShadowMap.hpp  ShadowMapVisitor.hpp  Solid.hpp  Texture.hpp  TextureManager.hpp  Transform.hpp  VisitParser.hpp  VisitorInterface.hpp  VisitorRender.hpp  VisitorShadowMap.hpp
chimera/physic/: Constraint.hpp  PhysicsControl.hpp  Solid.hpp
chimera/physic_loader/: PhysicsScene.hpp
chimera/render/: AABB.hpp  ApplicationGL.hpp  BSPTree.h  BSPTree.hpp  BSPTreeLeaf.hpp  BatchRender2D.hpp  Camera.hpp  CameraControllerOrtho.hpp  CameraFPS.hpp  CameraOrbit.hpp  CameraOrthographic.hpp  CanvasGL.hpp  CanvasHmd.hpp  CanvasOVR.hpp  ColladaRender.hpp  Components.hpp  EBO.hpp  Eye.hpp  Font.hpp  FontAtlas.hpp  FontManager.hpp  Frustum.hpp  Group.hpp  Group3d.hpp  HeightMap.hpp  ICamera.hpp  IRenderer2D.hpp  IRenderer3d.hpp  Label.hpp  Layer.hpp  Light.hpp  LoadHeightMap.hpp  LoadObj.hpp  MatData.hpp  Material.hpp  Mesh.hpp  MeshData.hpp  Octree.hpp  OpenGLDefs.hpp  PVS.hpp  (+34 more)
chimera/shaders/: CanvasHMD.frag  CanvasHMD.vert  HUD.frag  HUD.vert  MeshFullShadow.frag  MeshFullShadow.vert  MeshNoMat.frag  MeshNoMat.vert  ParticleEmitter.frag  ParticleEmitter.vert  ShadowMappingDepth.frag  ShadowMappingDepth.vert  WobblyTexture.fragmentshader  debug_quad.frag  debug_quad.vert  shadow_mapping.frag  shadow_mapping.vert
chimera/space/: AABB.hpp  BSPTree.hpp  BSPTreeNode.hpp  Cube.hpp  Frustum.hpp  HeapQ.hpp  ICamera.hpp  ITrans.hpp  LoadHeightMap.hpp  Mesh.hpp  Octree.hpp  Plane.hpp  Transform.hpp  Triangle.hpp  ViewProjection.hpp  space.hpp
chimera/src/: CMakeLists.txt  Camera.cpp  CameraMan.cpp  CameraOvr.cpp  (+58 more)
chimera_loaders/: CMakeLists.txt
(+1304 files in other folders)
